--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -1,6 +1,6 @@
 <section class="section-register">
     <h3>S'inscrire</h3>
-    <form [formGroup]="registerForm"] (ngSubmit)="onSubmit()">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div>
             <label for="username">Nom d'utilisateur</label>
             <input 
