create search page

--- a/src/app/components/sidebar/sidebar.css
+++ b/src/app/components/sidebar/sidebar.css
@@ -1,4 +1,10 @@
-h2 {
+
+.sidebar-section {
     padding: 10px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.sidebar-section > h2 {
     font-weight: bold;
 }
