CP - Add favorite logic and improve auth handling --> keep user session until logout to avoid unnecessary reconnection

--- a/src/app/pages/search/search.html
+++ b/src/app/pages/search/search.html
@@ -2,26 +2,28 @@
     <h2>Recherche de vidéos Youtube</h2>
     <div>
         <input placeholder="..." />
-        <button class="search-button">Rechercher</button>
+        <button class="search-button">
+            Rechercher
+        </button>
     </div>
 
     <div class="videos-grid">
         @for (video of videos(); track video.id) {
-        <div class="video-card" (keypress)="selectVideo(video)">
+        <div class="video-card" (mousedown)="selectVideo(video)">
             <img [src]="video.snippet.thumbnails.medium.url" [alt]="video.snippet.title" />
             <p>{{ video.snippet.title }}</p>
 
         </div>
         <button [class]="favoriteVideo().has(video.id) ? `favorited` : `favorite`"
-            (click)="toggleFavoriteVideo(video.id)">Ajouter</button>
+            (click)="toggleFavoriteVideo(video)">{{favoriteVideo().has(video.id) ? "Retirer" : "Ajouter"}}</button>
         }
     </div>
 
     @if (selectedVideo()) {
-    <div class="video-player-overlay" (keypress)="closeVideo()">
-        <div class="video-player" (keypress)="$event.stopPropagation()">
+    <div class="video-player-overlay" (mousedown)="closeVideo()">
+        <div class="video-player" (mousedown)="$event.stopPropagation()">
             <button (click)="closeVideo()">✕ Fermer</button>
-            <iframe title="popular video" [src]="getEmbedUrl(selectedVideo().id)" width="800" height="450"
+            <iframe title="popular video" [src]="getEmbedUrl(selectedVideo().id?.videoId ?? selectedVideo().id)" width="800" height="450"
                 allowfullscreen allow="autoplay; encrypted-media">
             </iframe>
             <h3>{{ selectedVideo().snippet.title }}</h3>
