--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -1,8 +1,16 @@
 <section class="sidebar-section">
-    <h2>MyYoutube</h2>
-    @if(currentUser()){
+  <h2>MyYoutube</h2>
+  @if(currentUser()){
     <p>Hello {{ currentUser()?.username }}</p>
     <h2>Playlist Vidéos</h2>
-    <p>Aucune vidéo dans votre playlist</p>
+    @if(favoritedVideo().length){
+      <ul>
+        @for(video of favoritedVideo(); track video.id){
+          <li>{{ video.snippet.title }}</li>
+        }
+      </ul>
+    } @else {
+      <p>Aucune vidéo dans votre playlist</p>
     }
+  }
 </section>
