CP - Allow favorite removal

--- a/src/app/components/sidebar/sidebar.css
+++ b/src/app/components/sidebar/sidebar.css
@@ -8,3 +8,9 @@
 .sidebar-section > h2 {
     font-weight: bold;
 }
+
+.playlist-item{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
